# nimbro_vision_servers

./: .gitignore  README.md  pyproject.toml
example/: usage.ipynb
example/outputs/: example_artifact_dam.json  example_artifact_mmgroundingdino.json  example_artifact_sam2_realtime.json  example_artifact_sam2_realtime_update.json
models/dam/: README.md  docker-compose.yml  pyproject.toml
models/dam/dam/: model.py  router.py  server.py  utils.py
models/dam/docker/: Dockerfile
models/dam/docker/include/: entrypoint.sh
models/dam/example/: example_artifact_dam.json  example_artifact_sam2_realtime.json  vision_server_dam.ipynb
models/florence2/: README.md  docker-compose.yml  pyproject.toml
models/florence2/docker/: Dockerfile
models/florence2/docker/include/: entrypoint.sh
models/florence2/example/: example_artifact_florence2.json
models/florence2/florence2/: model.py  server.py  utils.py
models/kosmos2/: README.md  docker-compose.yml  pyproject.toml
models/kosmos2/docker/: Dockerfile
models/kosmos2/docker/include/: entrypoint.sh
models/kosmos2/example/: example_artifact_kosmos2.json  vision_server_kosmos2.ipynb
models/kosmos2/kosmos2/: model.py  server.py  utils.py
models/mmgroundingdino/: README.md  docker-compose.yml  pyproject.toml
models/mmgroundingdino/docker/: Dockerfile
models/mmgroundingdino/docker/include/: download_nltk_models.py  entrypoint.sh
models/mmgroundingdino/example/: example_artifact_mmgroundingdino.json  vision_server_mmgroundingdino.ipynb
models/mmgroundingdino/mmgroundingdino/: model.py  server.py
models/sam2_realtime/: README.md  docker-compose.yml  pyproject.toml
models/sam2_realtime/docker/: Dockerfile
models/sam2_realtime/docker/include/: entrypoint.sh
models/sam2_realtime/example/: example_artifact_mmgroundingdino.json  example_artifact_sam2_realtime.json
models/sam2_realtime/sam2_realtime/: model.py  router.py  server.py
nimbro_vision_server/: model_base.py  router_base.py  server_base.py  utils.py
